QACI-402 Another solution
- dependencies folder contains files already downloaded and is not updated
- Maven Central uses HTTPS: all dependencies must be downloaded by JDK8
- jsf-tools are incompatible with JDK8
- synced Maven plugin dependencies
- created fixtive pom.xml to download all dependencies before real build
- ignoring user's settings.xml and using own